--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ PORT=3000
 DB_TYPE=postgres
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASS=password
+DB_PASS=postgres
 DB_NAME=siy
 DB_SYNC=true
 DB_PORT=5432
