--- a/ormconfig.example.json
+++ b/ormconfig.example.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": 5432,
   "username": "postgres",
-  "password": "password",
+  "password": "postgres",
   "database": "siy",
   "synchronize": true,
   "entities": ["src/entity/**/*.ts"],
