--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "typedi": "^0.8.0",
     "typeorm": "^0.2.29",
     "typeorm-seeding": "^1.6.1",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
