--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "schema.sync": "nps schema.sync"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "class-validator-jsonschema": "^2.0.3",
