--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "src/app.ts",
   "scripts": {
+    "preinstall": "npx only-allow yarn",
     "start": "nps",
     "dev": "nps dev",
     "seed.config": "nps seed.config",
@@ -16,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^5.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "pg": "^8.5.1",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.9",
+    "@types/faker": "^5.1.7",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.10",
     "@types/reflect-metadata": "^0.1.0",
@@ -40,5 +43,10 @@
     "nps": "^5.10.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0"
+  },
+  "engines": {
+    "npm": "please-use-yarn",
+    "yarn": ">= 1.17.3",
+    "node": ">= 12.5.0"
   }
 }
