--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cross-env": "^7.0.2",
     "mocha": "^8.3.1",
     "nodemon": "^2.0.6",
+    "ts-mocha": "^8.0.0",
     "tsconfig-paths": "^3.9.0"
   },
   "engines": {
