--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "routing-controllers": "^0.9.0-alpha.6",
     "routing-controllers-openapi": "^2.2.0",
     "ts-node": "^9.1.1",
-    "typedi": "^0.8.0",
-    "typeorm": "^0.2.29",
+    "tslib": "^2.1.0",
+    "typedi": "^0.10.0",
+    "typeorm": "^0.2.31",
     "typeorm-seeding": "^1.6.1",
     "typescript": "^4.1.2",
     "yarn": "^1.22.10"
@@ -47,7 +48,7 @@
     "@types/reflect-metadata": "^0.1.0",
     "chai": "^4.3.3",
     "cross-env": "^7.0.2",
-    "mocha": "^8.3.1",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.6",
     "ts-mocha": "^8.0.0",
     "tsconfig-paths": "^3.9.0"
