--- a/ormconfig.example.json
+++ b/ormconfig.example.json
@@ -17,7 +17,7 @@
   {
     "name": "test",
     "type": "postgres",
-    "host": "localhost",
+    "host": "postgres",
     "port": 5432,
     "username": "postgres",
     "password": "password",
