--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ stages:
 
 unit-testing:
   stage: test
-  image: docker:20
+  image: mhart/alpine-node:14
   before_script:
     - yarn config set cache-folder .yarn
     - yarn install --frozen-lockfile
@@ -36,7 +36,7 @@ unit-testing:
 
 build-staging:
   stage: build
-  image: node:14
+  image: docker:20
   script:
     - docker login $DOCKER_REGISTRY -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
     - docker build -t $DOCKER_USERNAME/siy-backend:latest .
@@ -48,7 +48,7 @@ build-staging:
 
 build-production:
   stage: build
-  image: node:14
+  image: docker:20
   script:
     - docker login $DOCKER_REGISTRY -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
     - docker build -t $DOCKER_USERNAME/siy-backend:production .
