--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "nps test"
   },
   "dependencies": {
+    "argon2": "^0.27.2",
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -20,6 +21,7 @@
     "exceljs": "^4.2.0",
     "express": "^4.17.1",
     "faker": "^5.4.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nps": "^5.10.0",
@@ -42,6 +44,7 @@
     "@types/expect": "^24.3.0",
     "@types/express": "^4.17.9",
     "@types/faker": "^5.1.7",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mocha": "^8.2.1",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.10",
