--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "preinstall": "npx only-allow yarn",
     "start": "nps",
     "dev": "nps dev",
-    "seed.config": "nps seed.config",
-    "seed.run": "nps seed.run",
-    "schema.drop": "nps schema.drop",
-    "schema.sync": "nps schema.sync",
-    "test": "nps test"
+    "schema:generate": "nps schema.generate",
+    "schema:migrate": "nps schema.migrate",
+    "test": "nps test",
+    "lint": "nps lint",
+    "lint:fix": "nps lint.fix"
   },
   "dependencies": {
+    "@prisma/client": "^2.21.2",
     "argon2": "^0.27.2",
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
@@ -35,7 +36,7 @@
     "typedi": "^0.7.3",
     "typeorm": "^0.2.31",
     "typeorm-seeding": "^1.6.1",
-    "typescript": "^4.1.2",
+    "typescript": "^4.2.4",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
@@ -49,10 +50,19 @@
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.10",
     "@types/reflect-metadata": "^0.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "chai": "^4.3.3",
     "cross-env": "^7.0.2",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-unused-imports": "^1.1.1",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.6",
+    "prettier": "^2.2.1",
+    "prisma": "2.21.2",
+    "prisma-dbml-generator": "^0.5.0",
     "sonarqube-scanner": "^2.8.0",
     "ts-mocha": "^8.0.0",
     "tsconfig-paths": "^3.9.0"
