--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "main": "src/app.ts",
   "scripts": {
+    "prepare": "nps prepare",
     "preinstall": "npx only-allow yarn",
     "start": "nps",
     "dev": "nps dev",
     "schema:generate": "nps schema.generate",
     "schema:migrate": "nps schema.migrate",
     "test": "nps test",
-    "lint": "nps lint",
+    "lint": "nps lint.run",
     "lint:fix": "nps lint.fix"
   },
   "dependencies": {
@@ -27,12 +28,13 @@
     "multer": "^1.4.2",
     "nps": "^5.10.0",
     "pg": "^8.5.1",
-    "redoc": "^2.0.0-rc.45",
+    "redoc": "^2.0.0-rc.53",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0-alpha.6",
     "routing-controllers-openapi": "^2.2.0",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
+    "tslog": "^3.2.0",
     "typedi": "^0.7.3",
     "typeorm": "^0.2.31",
     "typeorm-seeding": "^1.6.1",
@@ -58,6 +60,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-unused-imports": "^1.1.1",
+    "husky": "^6.0.0",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
