--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/faker": "^5.1.7",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mocha": "^8.2.1",
+    "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.10",
     "@types/reflect-metadata": "^0.1.0",
